Update : added filter div and logic that is extensible if we add more categories. Lack or failsafe if an image is created with a category that is not documented in the API/categories.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<!-- JS -->
+	<script src="./js/gallery.js" type="text/javascript" defer></script>
 	<script src="./js/main.js" type="text/javascript" defer></script>
 
 </head>
