--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<title>Home</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<meta name="description" content="">
+	<!-- CSS -->
 	<link rel="stylesheet" href="./assets/style.css">
 	<!-- JS -->
-	<script src="./js/gallery.js" type="text/javascript" defer></script>
 	<script src="./js/main.js" type="text/javascript" defer></script>
 
 </head>
@@ -19,9 +20,9 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li><a href="./index.html"class="active">projets</a></li>
+			<li><a href="">contact</a></li>
+			<li><a href="./login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
