Implemented login logic and automatic logout. Refactored some of main.js with more Error management.

--- a/FrontEnd/index-admin.html
+++ b/FrontEnd/index-admin.html
@@ -21,14 +21,15 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li><a href="./index.html" id="projets-nav">projets</a></li>
+			<li><a href="./index-admin.html">projets</a></li>
 			<li><a href="">contact</a></li>
-			<li><a href="./login.html" id="login-nav">login</a></li>
+			<li><a href="./index.html" class="active" id="login-button">logout</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
+	<h2>ADMIN</h2>
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
