--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -30,12 +30,10 @@
             <form id="login-form">
                 <label for="email-input">E-mail</label>
                 <input type="text" name="email-input" id="email-input" required>
-                <p class="error-message" id="email-error"></p>
+                <p id="error-message"></p>
                 <label for="password-input">Mot de passe</label>
                 <input type="password" name="password-input" id="password-input" required>
-                <p class="error-message" id="password-error"></p>
                 <input type="submit" id="submit-button" value="Se connecter">
-                <p class="error-message" id="submit-error"></p>
                 <a href="">Mot de passe oublié ?</a>
             </form>
         </section>
