--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,9 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<title>Home</title>
+	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<!-- Font Awesome -->
+	<script src="https://kit.fontawesome.com/5e1441734c.js" crossorigin="anonymous" defer></script>
 	<!-- CSS -->
 	<link rel="stylesheet" href="./assets/style.css">
 	<!-- JS -->
@@ -41,7 +44,9 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="title-div">
+			<h2 id="portfolio-title">Mes Projets</h2>
+		</div>
 		<div class="filters">
 		</div>
 		<div class="gallery">
