Finished implementing upload and deletion Still have to work on the CSS for upload form and do some refactoring and better error handling
Handled disable button

Still some small errors regarding the workspace duplicating itself for no reason

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -29,7 +29,7 @@
             <h2>Log in</h2>
             <form id="login-form">
                 <label for="email-input">E-mail</label>
-                <input type="text" name="email-input" id="email-input" required>
+                <input type="email" name="email-input" id="email-input" required>
                 <p id="error-message"></p>
                 <label for="password-input">Mot de passe</label>
                 <input type="password" name="password-input" id="password-input" required>
