Handled bug with e.listener multiplication

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<!-- Font Awesome -->
-	<script src="https://kit.fontawesome.com/5e1441734c.js" crossorigin="anonymous" defer></script>
+	<script src="https://kit.fontawesome.com/5e1441734c.js" crossorigin="anonymous" ></script>
 	<!-- CSS -->
 	<link rel="stylesheet" href="./assets/style.css">
 	<!-- JS -->
