--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -10,7 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/style.css">
     <!-- JS -->
-     <script src="./js/login.js" defer></script>
+     <script defer src="./js/login.js" ></script>
 </head>
 <body>
     <header>
