--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,6 +14,8 @@
 	<script src="https://kit.fontawesome.com/5e1441734c.js" crossorigin="anonymous" ></script>
 	<!-- CSS -->
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style-portfolio.css">
+	<link rel="stylesheet" href="./assets/style-modal.css">
 	<!-- JS -->
 	<script src="./js/main.js" type="text/javascript" defer></script>
 
