--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style-loginPage.css">
     <!-- JS -->
      <script defer src="./js/login.js" ></script>
 </head>
@@ -17,7 +18,7 @@
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li><a href="./index.html">projets</a></li>
+                <li><a href="./index.html">projets</a><i class="fa-solid fa-pen-to-square"></i></li>
                 <li><a href="">contact</a></li>
                 <li><a href="./login.html" class="active">login</a></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
