--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,9 +2,8 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
+	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +15,7 @@
 	<link rel="stylesheet" href="./assets/style-portfolio.css">
 	<link rel="stylesheet" href="./assets/style-modal.css">
 	<!-- JS -->
-	<script src="./js/main.js" type="text/javascript" defer></script>
+	<script src="./js/index.js" type="text/javascript" defer></script>
 
 </head>
 <body>
