--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; URL='./FrontEnd/index.html'" />
+  <meta http-equiv="refresh" content="0; URL='./FrontEnd/'" />
 </head>
 <body>
-  <p>If you are not redirected, click <a href="./FrontEnd/index.html">here</a>.</p>
+  <p>If you are not redirected, click <a href="./FrontEnd/">here</a>.</p>
 </body>
 </html>
